--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "partials/navbar" %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
