Display alerts and notices on all pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 
   <body>
     <%= render "partials/navbar" %>
+    <%= render "partials/alerts_and_notices" %>
     <div class="container">
       <%= yield %>
     </div>
