--- a/app/views/orgs/_form.html.erb
+++ b/app/views/orgs/_form.html.erb
@@ -4,15 +4,12 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :org_uuid %>
-    <%= f.input :slug %>
     <%= f.input :name %>
     <%= f.input :subdomain %>
     <%= f.input :domain %>
-    <%= f.input :color_scheme %>
-    <%= f.input :about %>
+    <%= f.input :color_scheme, collection: color_scheme_values %>
+    <%= f.input :about, as: :rich_text_area %>
     <%= f.input :logo %>
-    <%= f.input :archived_at %>
   </div>
 
   <div class="form-actions">
