--- a/app/views/orgs/_form.html.erb
+++ b/app/views/orgs/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
+    <%= f.input :name, input_html: { autocomplete: "organization" } %>
     <%= f.input :subdomain %>
     <%= f.input :domain %>
     <%= f.input :color_scheme, collection: color_scheme_values %>
