--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,23 +4,24 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :display_name, required: true, autofocus: true, input_html: { autocomplete: "name" } %>
 
+    <%= f.input :username, requred: true, input_html: { autocomplete: "username" } %>
+
+    <%= f.input :email, required: true, input_html: { autocomplete: "email" } %>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+    <%= f.input :password, required: false, hint: "leave it blank if you don't want to change it", input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :profile, as: :rich_text_area %>
+
+    <%= f.input :profile_picture %>
+
+    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true, input_html: { autocomplete: "current-password" } %>
   </div>
 
   <div class="form-actions">
