--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,17 +4,19 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+    <%= f.input :display_name, required: true, autofocus: true, input_html: { autocomplete: "name" } %>
+
+    <%= f.input :username, requred: true, input_html: { autocomplete: "username" } %>
+
+    <%= f.input :email, required: true, input_html: { autocomplete: "email" } %>
+
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
+
+    <%= f.input :profile, as: :rich_text_area %>
+
+    <%= f.input :profile_picture %>
   </div>
 
   <div class="form-actions">
